# IronFix

./: Cargo.toml  Makefile  README.md
.github/workflows/: semver.yml
Docker/: README.md  fast.Dockerfile  fix40.Dockerfile  fix41.Dockerfile  fix42.Dockerfile  fix43.Dockerfile  fix44.Dockerfile  fix50.Dockerfile  fix50sp1.Dockerfile  fix50sp2.Dockerfile
doc/: fix_operations.md
examples/: README.md  fix40_client.rs  fix40_server.rs  fix41_client.rs  fix41_server.rs  fix42_client.rs  fix42_server.rs  fix43_server.rs  fix50_client.rs  fix50sp1_server.rs  fix50sp2_server.rs
ironfix/: Cargo.toml
ironfix-codegen/: Cargo.toml
ironfix-codegen/src/: generator.rs  lib.rs
ironfix-core/: Cargo.toml
ironfix-core/src/: error.rs  field.rs  lib.rs  message.rs  types.rs
ironfix-derive/: Cargo.toml
ironfix-derive/src/: lib.rs
ironfix-dictionary/: Cargo.toml
ironfix-dictionary/src/: lib.rs  schema.rs
ironfix-engine/: Cargo.toml
ironfix-engine/src/: application.rs  builder.rs  lib.rs
ironfix-example/: Cargo.toml
ironfix-example/examples/: fast_client.rs  fast_server.rs  fast_server_spsc.rs  fix40_client.rs  fix40_server.rs  fix41_client.rs  fix41_server.rs  fix42_client.rs  fix42_server.rs  fix43_client.rs  fix43_server.rs  fix44_client.rs  fix44_server.rs  fix44_server_channel.rs  fix50_client.rs  fix50_server.rs  fix50sp1_client.rs  fix50sp1_server.rs  fix50sp2_client.rs  fix50sp2_server.rs
ironfix-example/examples/common/: mod.rs
ironfix-example/src/: lib.rs
ironfix-fast/: Cargo.toml
ironfix-fast/src/: decoder.rs  encoder.rs  error.rs  lib.rs  operators.rs  pmap.rs
ironfix-session/: Cargo.toml
ironfix-session/src/: config.rs  heartbeat.rs  lib.rs  sequence.rs  state.rs
ironfix-store/: Cargo.toml
ironfix-store/src/: lib.rs  memory.rs  traits.rs
ironfix-tagvalue/: Cargo.toml
ironfix-tagvalue/src/: checksum.rs  decoder.rs  encoder.rs  lib.rs
ironfix-transport/: Cargo.toml
ironfix-transport/src/: codec.rs  lib.rs
ironfix/examples/: fix44_client.rs  fix50_server.rs  fix50sp1_client.rs
ironfix/src/: lib.rs
src/: main.rs
