[package]
name = "IronFix"
version = "0.1.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Fix protocol implementation in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/IronFix"
homepage = "https://github.com/joaquinbejar/IronFix"
keywords = ["finance", "fix", "trading"]
categories = ["finance", "data-structures"]

[dependencies]
serde = "1.0"