[package]
name = "ironfix-core"
description = "Core types, traits, and error definitions for IronFix FIX protocol engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
smallvec.workspace = true
arrayvec.workspace = true
num-traits.workspace = true
num-derive.workspace = true
rust_decimal.workspace = true
chrono.workspace = true

[dev-dependencies]
