[package]
name = "ironfix-session"
description = "FIX session layer protocol implementation for IronFix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ironfix-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[dev-dependencies]
